--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -19,7 +19,8 @@
   </head>
 
   <body>
-
+    <div id="updating-page">
+    </div>
     <div id="wrapper">
       <!-- Navigation bar -->
       <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
