--- a/src/vboa/templates/eboa_nav/query_gauges_content.html
+++ b/src/vboa/templates/eboa_nav/query_gauges_content.html
@@ -5,43 +5,55 @@
         <div class="col-xs-12">
           <form role="form" method=post action="/eboa_nav/query-gauges">
             <div>
-              <div class="row  query-gauges">
-                <div class="col-xs-3 query-gauge-names">
-                  <label id="gauges-gauge-names-like-checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge-name-like-gauges" name="gauge_name_like" id="gauges-gauge-names-like-text"/>
-                  <datalist id="gauge-name-like-gauges">
-                  </datalist>
+              <div class="row">
+                <div class="col-xs-3">
+                  <label>Gauge name</label>
+                  <div class="input-group" style="width: 100%">
+                    <input class="form-control" style="width: 80%" name="gauge_name" id="gauges-gauge-name-text"/>
+                    <select class="form-control" style="padding-left: 0; width: 20%" name="gauge_name_operator" id="gauges-gauge-name-operator">
+                      {% include "eboa_nav/operators.html" %}
+                    </select>
+                  </div>
                 </div>
-                <div class="col-xs-3 query-gauge-systems">
-                  <label id="gauges-gauge-system-like-checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge-system-like-gauges" name="gauge_system_like" id="gauges-gauge-system-like-text"/>
-                  <datalist id="gauge-system-like-gauges">
-                  </datalist>
+                <div class="col-xs-3">
+                  <label>Gauge system</label>
+                  <div class="input-group" style="width: 100%">
+                    <input class="form-control" style="width: 80%" name="gauge_system" id="gauges-gauge-system-text"/>
+                    <select class="form-control" style="padding-left: 0; width: 20%" name="gauge_system_operator" id="gauges-gauge-system-operator">
+                      {% include "eboa_nav/operators.html" %}
+                    </select>
+                  </div>
                 </div>
               </div>
-              <div class="row query-gauges">
-                <div class="col-xs-3 query-gauge-names">
+              <div class="row">
+                <div class="col-xs-3">
                   <label id="gauges-gauge-names-in-checkbox">Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges-gauge-names-in-text">
+                  <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-gauges-by-name', 'name', 20, 0)" id="gauges-gauge-names-in-text"/><i class="circle"></i>
+                  <select name="gauge_names" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="gauges-gauge-names-in-select">
                   </select>
                 </div>
-                <div class="col-xs-3 query-gauge-systems">
+                <div class="col-xs-3">
                   <label id="gauges-gauge-system-in-checkbox">Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges-gauge-system-in-text">
+                  <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-gauges-by-system', 'system', 20, 0)" id="gauges-gauge-systems-in-text"/><i class="circle"></i>
+                  <select name="gauge_systems" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="gauges-gauge-systems-in-select">
                   </select>
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-3 query-dim-signatures">
-                <label id="gauges-dim-signatures-like-checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim-signature-like-sources" name="dim_signature_like" id="gauges-dim-signatures-like-text"/>
-                <datalist id="dim-signature-like-sources">
-                </datalist>
+              <div class="col-xs-3">
+                <label>DIM signature</label>
+                <div class="input-group" style="width: 100%">
+                  <input class="form-control" style="width: 80%" name="dim_signature" id="gauges-dim-signature-text"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="dim_signature_operator" id="gauges-dim-signature-operator">
+                    {% include "eboa_nav/operators.html" %}
+                  </select>
+                </div>
               </div>
-              <div class="col-xs-3 query-dim-signatures">
+              <div class="col-xs-3">
                 <label id="gauges-dim-signatures-in-checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1"  id="gauges-dim-signatures-in-text">
+                <input class="form-control" placeholder="Fill for searching items... Showing 20 items on keyup" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-dim-signatures', 'dim_signature', 20, 0)" id="gauges-dim-signatures-in-text"/><i class="circle"></i>
+                <select name="dim_signatures" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="gauges-dim-signatures-in-select">
                 </select>
               </div>
             </div>
